--- a/debian/postinst.in
+++ b/debian/postinst.in
@@ -44,10 +44,8 @@ update_to_current_default() {
   fi
 }
 
-if [ ! -e /etc/dpkg/origins/default ]; then
-  if [ -e /etc/dpkg/origins/#VENDORFILE# ]; then
-    ln -sf #VENDORFILE# /etc/dpkg/origins/default
-  fi
+if [ -e /etc/dpkg/origins/#VENDORFILE# ]; then
+  ln -sf /etc/dpkg/origins/#VENDORFILE# /etc/dpkg/origins/default
 fi
 
 if [ "$1" = "configure" ] && [ "$2" = "" ]; then
