Fix the support email address
Change-Id: I3fc32af280343b73089328834ab448dcdbbf20a4

--- a/debian/copyright.in
+++ b/debian/copyright.in
@@ -6,7 +6,7 @@ This package was first put together by Bruce Perens <Bruce@Pixar.com>,
 from his own sources.
 
 This package was further forked by the AIY Projects team
-<support-aiyprojects@google.com> for Mendel.
+<coral-support@google.com> for Mendel.
 
 The GNU Public Licenses in /usr/share/common-licenses were taken from
 ftp.gnu.org and are copyrighted by the Free Software Foundation, Inc.
