Fix the support name
Change-Id: Ia7e9aa59da832324d572ca28b4ba3b8ad2d29e91

--- a/debian/copyright.in
+++ b/debian/copyright.in
@@ -5,7 +5,7 @@ Miscellaneous files. These files were originally written by Ian Murdock
 This package was first put together by Bruce Perens <Bruce@Pixar.com>,
 from his own sources.
 
-This package was further forked by the AIY Projects team
+This package was further forked by the Coral team
 <coral-support@google.com> for Mendel.
 
 The GNU Public Licenses in /usr/share/common-licenses were taken from
