--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: base-files
 Section: admin
 Priority: required
-Maintainer: AIY Projects <coral-support@google.com>
+Maintainer: Coral <coral-support@google.com>
 Standards-Version: 3.9.8
 Build-Depends: debhelper (>= 9)
 
