--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: base-files
 Section: admin
 Priority: required
 Maintainer: Coral <coral-support@google.com>
-Standards-Version: 3.9.8
+Standards-Version: 4.1.3
 Build-Depends: debhelper (>= 9)
 
 Package: base-files
@@ -13,7 +13,8 @@ Depends: ${misc:Depends}
 Essential: yes
 Priority: required
 Replaces: base, miscutils, dpkg (<= 1.15.0)
-Breaks: initscripts (<< 2.88dsf-13.3), sendfile (<< 2.1b.20080616-5.2~)
+Breaks: initscripts (<< 2.88dsf-13.3), sendfile (<< 2.1b.20080616-5.2~),
+ debian-security-support (<< 2019.04.25)
 Multi-Arch: foreign
 Description: Mendel base system miscellaneous files
  This package contains the basic filesystem hierarchy of a Mendel system, and
